# VerspaetungsOrakel

./: .gitignore  Bahn APIs  Dockerfile  LICENSE  README.md  entrypoint.sh  index.html  pyproject.toml  style.css
.github/workflows/: docker-build.yaml
backend/: .gitignore  pyproject.toml
backend/tests/: test_main.py
backend/verspaetungsorakel/: fetch_stations.py  fetch_timetables.py  logger.py  main.py  model.py
backend/verspaetungsorakel/fetch/: rt_data.py  stations.py  timetables.py  utils.py
frontend/: index.html  index.js  package-lock.json  package.json  style.css
frontend/src/: app.html
frontend/src/routes/: +page.svelte
templates/: index.html
templates/api/: data.html  data_error.html  stations_search.html  trains_search.html
templates/components/: data.html
tests/: test_main.py
verspaetungsorakel/: bahn.py  database.py  fetch_rt_data.py  fetch_timetables.py  main.py  model.py
verspaetungsorakel/static/: index.js  style.css
verspaetungsorakel/templates/: index.html
