[project]
name = "verspaetungsorakel"
version = "0.2.8"
description = "Add your description here"
authors = [
    { name = "2mal3", email = "56305732+2mal3@users.noreply.github.com" },
    { name = "Erik", email = "mail@eriks.one" },
    { name = "JH-Tobias", email = "139634570+JH-Tobias@users.noreply.github.com" },
    { name = "Quirin Maier", email = "quirinmaier2008@gmail.com" },
    { name = "code1337", email = "115311343+c0d3-1337@users.noreply.github.com" }
]
dependencies = [
    "fastapi~=0.104",
    "uvicorn~=0.24",
    "jinja2~=3.1",
    "python-dotenv~=1.0",
    "pony~=0.7",
    "deutsche-bahn-api~=1.0",
    "apscheduler~=3.10",
    "gunicorn~=21.2",
    "slowapi~=0.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
